--- a/form-request.html
+++ b/form-request.html
@@ -145,7 +145,7 @@ button[type="submit"]:hover {
       <option value="TIDAK MENGIKUTI">TIDAK MENGIKUTI</option>
     </select>
 
-    <button type="submit">KIRIM REQUEST</button>
+    <button type="submit" id="submitBtn">KIRIM REQUEST</button>
     <div id="status"></div>
 
     <div id="footer">
@@ -164,6 +164,7 @@ const MAX_KUOTA_HARIAN = 21;
 
 const monthNames = ["Januari","Februari","Maret","April","Mei","Juni","Juli","Agustus","September","Oktober","November","Desember"];
 
+// === Header Bulan Depan ===
 (function updateHeader() {
   const today = new Date();
   const nextMonth = new Date(today.getFullYear(), today.getMonth() + 1, 1);
@@ -173,11 +174,13 @@ const monthNames = ["Januari","Februari","Maret","April","Mei","Juni","Juli","Ag
   document.getElementById('page-title').textContent = headerText;
 })();
 
+// === Ambil data dari URL ===
 const params = new URLSearchParams(window.location.search);
 document.getElementById("nik").value = params.get("nik") || "";
 document.getElementById("nama").value = params.get("nama") || "";
 document.getElementById("group").value = params.get("group") || "";
 
+// === Ambil data kuota & inisialisasi kalender ===
 async function fetchFullDays() {
   try {
     const response = await fetch(quotaURL);
@@ -196,7 +199,7 @@ function initDatepicker(selector, disabledDays) {
 
   if (document.querySelector(selector).datepicker) document.querySelector(selector).datepicker.destroy();
 
-  const dp = new AirDatepicker(selector, {
+  new AirDatepicker(selector, {
     multipleDates: true,
     multipleDatesSeparator: ', ',
     dateFormat: 'd-MM',
@@ -227,45 +230,62 @@ async function initializeApp() {
 }
 initializeApp();
 
-// === Countdown ===
+// === Countdown Otomatis Tiap Bulan ===
 function startCountdown() {
   const now = new Date();
-  const deadline = new Date(now.getFullYear(), now.getMonth(), 25, 23, 59, 59);
+  const openDate = new Date(now.getFullYear(), now.getMonth(), 1, 0, 10, 0);   // buka tgl 1 jam 00:10
+  const closeDate = new Date(now.getFullYear(), now.getMonth(), 16, 23, 59, 59); // tutup tgl 16 jam 23:59
+  const nextMonthOpen = new Date(now.getFullYear(), now.getMonth() + 1, 1, 0, 10, 0);
+  const countdownEl = document.getElementById("countdown");
+  const form = document.getElementById("requestForm");
+  const submitBtn = document.getElementById("submitBtn");
+
   function updateCountdown() {
-    const diff = deadline - new Date();
-    if (diff <= 0) {
-      document.getElementById('countdown').textContent = "⏰ Waktu request sudah berakhir.";
-      clearInterval(timer);
-      return;
+    const current = new Date();
+    let target, mode;
+
+    if (current < openDate) {
+      target = openDate;
+      mode = "belum buka";
+    } else if (current >= openDate && current <= closeDate) {
+      target = closeDate;
+      mode = "buka";
+    } else {
+      target = nextMonthOpen;
+      mode = "tutup";
     }
+
+    const diff = target - current;
     const days = Math.floor(diff / (1000 * 60 * 60 * 24));
     const hours = Math.floor((diff / (1000 * 60 * 60)) % 24);
     const mins = Math.floor((diff / (1000 * 60)) % 60);
     const secs = Math.floor((diff / 1000) % 60);
-    document.getElementById('countdown').textContent = 
-      `Sisa waktu request: ${days}Hari ${hours}Jam ${mins}Menit ${secs}Detik`;
+
+    if (mode === "belum buka") {
+      countdownEl.textContent = `⏳ Belum dibuka. Buka dalam: ${days}Hari ${hours}Jam ${mins}Menit ${secs}Detik`;
+      form.querySelectorAll("input, select, button").forEach(el => el.disabled = true);
+    } else if (mode === "buka") {
+      countdownEl.textContent = `Sisa waktu request: ${days}Hari ${hours}Jam ${mins}Menit ${secs}Detik`;
+      form.querySelectorAll("input, select, button").forEach(el => el.disabled = false);
+    } else {
+      countdownEl.textContent = "⏰ Waktu request sudah berakhir. Tunggu periode berikutnya.";
+      form.querySelectorAll("input, select, button").forEach(el => el.disabled = true);
+    }
   }
+
   updateCountdown();
-  const timer = setInterval(updateCountdown, 1000);
+  setInterval(updateCountdown, 1000);
 }
 startCountdown();
 
-// === Submit Data ===
+// === Kirim Data ===
 document.getElementById("requestForm").addEventListener("submit", function(e){
   e.preventDefault();
   const status = document.getElementById("status");
   status.textContent = "⏳ Mengirim data...";
   status.className = "";
 
-  const formData = new FormData();
-  formData.append('nik', document.getElementById("nik").value);
-  formData.append('nama', document.getElementById("nama").value);
-  formData.append('group', document.getElementById("group").value);
-  formData.append('requestLainnya', document.getElementById("requestLainnya").value);
-  formData.append('ekstrakulikuler', document.getElementById("ekstrakulikuler").value);
-  formData.append('libur', document.getElementById("libur").value || "");
-  formData.append('cuti', document.getElementById("cuti").value || "");
-
+  const formData = new FormData(this);
   fetch(scriptURL, { method: "POST", body: formData })
     .then(res=>res.text())
     .then(resText=>{
